[package]
name = "rr-infra-monitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "monitor"
path = "src/lib.rs"

[dependencies]
# Async runtime và metrics collection
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenTelemetry for observability
opentelemetry = "0.17"
tracing = "0.1"
tracing-opentelemetry = "0.17"
tracing-subscriber = "0.3"

# Metrics collection
metrics = "0.20"
metrics-exporter-prometheus = "0.10"

# Health checking
health = "0.1"

# Hace ecosystem dependencies
hacetime = { path = "../core/hacetime", package = "hacetime", features = ["std"] }
runtime = { path = "../core/runtime", package = "rr-runtime", features = ["std"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[features]
default = ["std"]
std = []
